--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,9 @@ exportPattern("^[[:alpha:]]+")
 export(stan_foot)
 export(foot_abilities)
 export(foot_prob)
-
+import(rstan)
+import(engsoccerdata)
+import(tidyverse)
+import(arm)
+import(reshape2)
+import(ggplot2)
