--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ exportPattern("^[[:alpha:]]+")
 export(stan_foot)
 export(foot_abilities)
 export(foot_prob)
+import(Rcpp)
 import(rstan)
 import(engsoccerdata)
 import(tidyverse)
