--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(foot_abilities)
 export(foot_prob)
 
 #import(rstan)
-import(engsoccerdata)
-import(tidyverse)
+#import(engsoccerdata)
+#import(tidyverse)
 import(arm)
 import(reshape2)
 import(ggplot2)
