--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
-Imports: engsoccerdata, rstan, tidyverse, arm, reshape2, ggplot2
+Imports:  rstan, arm, reshape2, ggplot2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
