--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,12 @@
 export(foot_abilities)
 export(foot_prob)
 export(stan_foot)
+import("#import(engsoccerdata)")
+import("#import(tidyverse)")
+import("(arm)")
+import("(bayesplot)")
+import("(ggplot2)")
+import("(matrixStats)")
+import("(reshape2)")
+import("(rstan)")
+importFrom("(arm,","coefplot)")
