--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,10 @@
 export(foot_abilities)
 export(foot_prob)
 export(stan_foot)
+import(arm)
+import(bayesplot)
+import(ggplot2)
+import(matrixStats)
+import(reshape2)
 import(rstan)
+importFrom("arm,",coefplot)
