--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(foot_prob)
 export(stan_foot)
 import(arm)
 import(bayesplot)
+import(engsoccerdata)
 import(ggplot2)
 import(matrixStats)
 import(reshape2)
