--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,12 @@ Maintainer: Leonardo Egidi <legidi@units.it>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
-Imports:  rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats,
+Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats,
           engsoccerdata, tidyverse
 LinkingTo: StanHeaders (>= 2.18.0), rstan (>= 2.18.1), BH (>= 1.66.0),
         Rcpp (>= 0.12.0), RcppEigen (>= 0.3.3.3.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Suggests: 
+    testthat
