--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(foot_abilities)
 export(foot_prob)
 export(foot_rank)
 export(foot_round_robin)
+export(mle_foot)
 export(pp_foot)
 export(stan_foot)
 import(arm)
@@ -17,7 +18,10 @@ importFrom(arm,coefplot)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,xaxis_text)
 importFrom(bayesplot,yaxis_text)
+importFrom(extraDistr,dbvpois)
+importFrom(extraDistr,dskellam)
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colQuantiles)
 importFrom(matrixStats,colVars)
+importFrom(metRology,dt.scaled)
 importFrom(reshape2,melt)
