--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,10 +20,13 @@ importFrom(bayesplot,xaxis_text)
 importFrom(bayesplot,yaxis_text)
 importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
+importFrom(extraDistr,rbvpois)
+importFrom(extraDistr,rskellam)
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colQuantiles)
 importFrom(matrixStats,colVars)
 importFrom(metRology,dt.scaled)
+importFrom(metRology,rt.scaled)
 importFrom(numDeriv,hessian)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
