--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,16 +18,24 @@ importFrom(arm,coefplot)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,xaxis_text)
 importFrom(bayesplot,yaxis_text)
+importFrom(cauchy,rstanarm)
 importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
 importFrom(extraDistr,rskellam)
+importFrom(hs,rstanarm)
+importFrom(hs_plus,rstanarm)
+importFrom(laplace,rstanarm)
+importFrom(lasso,rstanarm)
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colQuantiles)
 importFrom(matrixStats,colVars)
 importFrom(metRology,dt.scaled)
 importFrom(metRology,rt.scaled)
+importFrom(normal,rstanarm)
 importFrom(numDeriv,hessian)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
+importFrom(product_normal,rstanarm)
 importFrom(reshape2,melt)
+importFrom(student_t,rstanarm)
