--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,23 +14,23 @@ import(ggplot2)
 import(matrixStats)
 import(reshape2)
 import(rstan)
-importFrom(arm,coefplot)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,xaxis_text)
 importFrom(bayesplot,yaxis_text)
+importFrom(coefplot,arm)
 importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
 importFrom(extraDistr,rskellam)
-importFrom(laplace,rstanarm)
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colQuantiles)
 importFrom(matrixStats,colVars)
 importFrom(metRology,dt.scaled)
 importFrom(metRology,rt.scaled)
-importFrom(normal,rstanarm)
 importFrom(numDeriv,hessian)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
 importFrom(reshape2,melt)
-importFrom(student_t,rstanarm)
+importFrom(rstanarm,laplace)
+importFrom(rstanarm,normal)
+importFrom(rstanarm,student_t)
