--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,10 @@ import(ggplot2)
 import(matrixStats)
 import(reshape2)
 import(rstan)
+importFrom(arm,coefplot)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,xaxis_text)
 importFrom(bayesplot,yaxis_text)
-importFrom(coefplot,arm)
 importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
