--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(foot_prob)
 export(foot_rank)
 export(foot_round_robin)
 export(mle_foot)
+export(normal)
 export(pp_foot)
 export(stan_foot)
 import(arm)
@@ -32,6 +33,3 @@ importFrom(numDeriv,hessian)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
 importFrom(reshape2,melt)
-importFrom(rstanarm,laplace)
-importFrom(rstanarm,normal)
-importFrom(rstanarm,student_t)
