--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,3 +36,4 @@ importFrom(numDeriv,hessian)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
 importFrom(reshape2,melt)
+importFrom(rstan,traceplot)
