--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(normal)
 export(pp_foot)
 export(stan_foot)
 export(student_t)
+import(arm)
 import(bayesplot)
 import(engsoccerdata)
 import(ggplot2)
