--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: This is the first package allowing for the estimation,
              'static' models only).
 License: GPL-2
 Depends: R (>= 3.1.0)
-Imports: rstan (>= 2.18.1), reshape2, ggplot2, bayesplot, matrixStats,
+Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats,
          extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv
 LinkingTo: StanHeaders (>= 2.18.0), rstan (>= 2.18.1), BH (>= 1.66.0),
         Rcpp (>= 0.12.0), RcppEigen (>= 0.3.3.3.0)
