--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: This is the first package allowing for the estimation,
 License: GPL-2
 Depends: R (>= 3.1.0)
 Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats,
-         extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv
+         extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv, tidyverse
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
