--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, loo,
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
-VignetteBuilder: knitr
+VignetteBuilder: rmarkdown
 Suggests: 
     testthat, knitr, rmarkdown
 BuildManual: yes
