--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: footBayes
 Type: Package
 Title: Fitting Bayesian and MLE football models
 Version: 0.1.0
+Date: 2022-02-10
 Author: Leonardo Egidi
 Maintainer: Leonardo Egidi <legidi@units.it>
 Description: This is the first package allowing for the estimation,
@@ -11,12 +12,13 @@ Description: This is the first package allowing for the estimation,
              Monte Carlo (HMC) estimation through the underlying Stan
              environment and Maximum Likelihood estimation (MLE, for 
              'static' models only).
+URL: https://github.com/leoegidi/footBayes
+Encoding: UTF-8             
 License: GPL-2
 Depends: R (>= 3.1.0)
 Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, loo,
          extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv, tidyverse
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.1.2
 VignetteBuilder: rmarkdown
 Suggests: 
