--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
 importFrom(extraDistr,rskellam)
 importFrom(graphics,par)
+importFrom(magrittr,"%>%")
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colQuantiles)
 importFrom(matrixStats,colVars)
