--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Depends: R (>= 3.1.0)
 Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, loo,
          extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv, tidyverse, magrittr
 Encoding: UTF-8
+SystemRequirements: pandoc (>= 1.12.3), pandoc-citeproc
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
 Suggests: testthat, knitr, rmarkdown
