--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.1.0
 Date: 2022-02-10
 Author: Leonardo Egidi
 Maintainer: Leonardo Egidi <legidi@units.it>
+License: GPL-2
 Description: This is the first package allowing for the estimation,
              visualization and prediction of the most well-known 
              football models: double Poisson, bivariate Poisson,
@@ -12,14 +13,13 @@ Description: This is the first package allowing for the estimation,
              Monte Carlo (HMC) estimation through the underlying Stan
              environment and Maximum Likelihood estimation (MLE, for 
              'static' models only).
-URL: https://github.com/leoegidi/footBayes
-License: GPL-2
+URL: https://github.com/leoegidi/footbayes
+Encoding: UTF-8
+SystemRequirements: pandoc (>= 1.12.3), pandoc-citeproc
 Depends: R (>= 3.1.0)
 Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, loo,
          extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv, tidyverse, magrittr
-Encoding: UTF-8
-SystemRequirements: pandoc (>= 1.12.3), pandoc-citeproc
-RoxygenNote: 7.1.2
-VignetteBuilder: knitr
 Suggests: testthat, knitr, rmarkdown
+VignetteBuilder: knitr
+RoxygenNote: 7.1.2
 BuildManual: yes
