--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: footBayes
 Type: Package
-Title: Fitting Bayesian and MLE football models
+Title: Fitting Bayesian and MLE Football Models
 Version: 0.1.0
 Date: 2022-02-10
 Author: Leonardo Egidi
