--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Fitting Bayesian and MLE Football Models
 Version: 0.1.0
 Date: 2022-02-10
-Author: Leonardo Egidi
+Author: Leonardo Egidi[aut, cre]
 Maintainer: Leonardo Egidi <legidi@units.it>
 License: GPL-2
 Description: This is the first package allowing for the estimation,
@@ -12,14 +12,18 @@ Description: This is the first package allowing for the estimation,
              Skellam, student_t. The package allows Hamiltonian
              Monte Carlo (HMC) estimation through the underlying Stan
              environment and Maximum Likelihood estimation (MLE, for 
-             'static' models only).
+             'static' models only). The model construction relies on
+             the most well-known football references, such as 
+             Dixon and Coles (1997) <doi:10.1111/1467-9876.00065>,
+             Karlis and Ntzoufras (2003) <doi:10.1111/1467-9884.00366> and
+             Egidi, Pauli and Torelli (2018) <doi:10.1177/1471082X18798414>.
 URL: https://github.com/leoegidi/footbayes
 Encoding: UTF-8
 SystemRequirements: pandoc (>= 1.12.3), pandoc-citeproc
 Depends: R (>= 3.1.0)
-Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, loo,
-         extraDistr, parallel, metRology, dplyr, engsoccerdata, numDeriv, tidyverse, magrittr
-Suggests: testthat, knitr (>= 1.37), rmarkdown (>= 2.10)
+Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, 
+         extraDistr, parallel, metRology, dplyr, numDeriv, tidyverse, magrittr
+Suggests: testthat, knitr (>= 1.37), rmarkdown (>= 2.10), engsoccerdata, loo
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 BuildManual: yes
