--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ SystemRequirements: pandoc (>= 1.12.3), pandoc-citeproc
 Depends: R (>= 3.1.0)
 Imports: rstan (>= 2.18.1), arm, reshape2, ggplot2, bayesplot, matrixStats, 
          extraDistr, parallel, metRology, dplyr, numDeriv, tidyverse, magrittr
-Suggests: testthat, knitr (>= 1.37), rmarkdown (>= 2.10), engsoccerdata, loo
+Suggests: testthat, knitr (>= 1.37), rmarkdown (>= 2.10), loo
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 BuildManual: yes
