--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ import(ggplot2)
 import(matrixStats)
 import(reshape2)
 import(rstan)
+import(tidyr)
 importFrom(arm,coefplot)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,xaxis_text)
