Updated btd_foot with home effect

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
 importFrom(reshape2,melt)
 importFrom(rstan,traceplot)
+importFrom(stats,density)
 importFrom(stats,dpois)
 importFrom(stats,filter)
 importFrom(stats,median)
