Update stan_foot and btd_foot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,19 +13,20 @@ export(pp_foot)
 export(stan_foot)
 export(student_t)
 import(bayesplot)
-import(dplyr)
 import(ggplot2)
 import(matrixStats)
 import(reshape2)
-import(rstan)
-import(tidyr)
 importFrom(arm,coefplot)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,xaxis_text)
 importFrom(bayesplot,yaxis_text)
+importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
@@ -53,3 +54,5 @@ importFrom(stats,pchisq)
 importFrom(stats,quantile)
 importFrom(stats,rpois)
 importFrom(stats,sd)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
