--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,5 +56,6 @@ importFrom(stats,pchisq)
 importFrom(stats,quantile)
 importFrom(stats,rpois)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
