adding features to plot_btdPosterior.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
 importFrom(extraDistr,rskellam)
+importFrom(ggridges,stat_density_ridges)
 importFrom(graphics,par)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,colMedians)
