--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(reshape2,melt)
 importFrom(rstan,extract)
 importFrom(rstan,stan)
 importFrom(rstan,traceplot)
+importFrom(stats,approx)
 importFrom(stats,density)
 importFrom(stats,dpois)
 importFrom(stats,median)
