--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(numDeriv,hessian)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
 importFrom(reshape2,melt)
+importFrom(rlang,.data)
 importFrom(rstan,extract)
 importFrom(rstan,stan)
 importFrom(rstan,traceplot)
