--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,24 +18,63 @@ export(plot_logStrength)
 export(pp_foot)
 export(stan_foot)
 export(student_t)
-import(ggplot2)
 import(matrixStats)
-import(reshape2)
-importFrom(arm,coefplot)
-importFrom(bayesplot,color_scheme_get)
-importFrom(bayesplot,xaxis_text)
-importFrom(bayesplot,yaxis_text)
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,distinct)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,where)
 importFrom(extraDistr,dbvpois)
 importFrom(extraDistr,dskellam)
 importFrom(extraDistr,rbvpois)
 importFrom(extraDistr,rskellam)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,annotate)
+importFrom(ggplot2,dup_axis)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_errorbarh)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,lims)
+importFrom(ggplot2,position_dodge)
+importFrom(ggplot2,rel)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_fill_gradient)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,scale_y_discrete)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,unit)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(ggridges,stat_density_ridges)
-importFrom(graphics,par)
+importFrom(instantiate,stan_package_model)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,colMedians)
 importFrom(matrixStats,colQuantiles)
@@ -43,22 +82,15 @@ importFrom(matrixStats,colVars)
 importFrom(metRology,dt.scaled)
 importFrom(metRology,rt.scaled)
 importFrom(numDeriv,hessian)
-importFrom(parallel,clusterExport)
-importFrom(parallel,makeCluster)
+importFrom(posterior,as_draws_rvars)
+importFrom(posterior,draws_of)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rstan,extract)
-importFrom(rstan,stan)
-importFrom(rstan,traceplot)
 importFrom(stats,approx)
 importFrom(stats,density)
-importFrom(stats,dpois)
 importFrom(stats,median)
-importFrom(stats,optim)
-importFrom(stats,pchisq)
 importFrom(stats,quantile)
-importFrom(stats,rpois)
-importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
